# ChangeLog for net-zope/zope
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.189 2010/12/07 17:16:29 arfrever Exp $

*zope-2.13.1 (07 Dec 2010)

  07 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.13.1.ebuild:
  Version bump.

*zope-2.12.14 (07 Dec 2010)

  07 Dec 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.12.ebuild, +zope-2.12.14.ebuild:
  Version bump.

  29 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  zope-2.12.12.ebuild, zope-2.12.13.ebuild, zope-2.13.0.ebuild:
  Restrict Jython ABIs.

*zope-2.12.13 (07 Nov 2010)

  07 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.11.ebuild, +zope-2.12.13.ebuild:
  Version bump.

*zope-2.13.0 (07 Nov 2010)

  07 Nov 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.0_beta1.ebuild, -zope-2.13.0_rc1.ebuild, +zope-2.13.0.ebuild:
  Version bump.

*zope-2.13.0_rc1 (30 Oct 2010)

  30 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.13.0_alpha4.ebuild, +zope-2.13.0_rc1.ebuild:
  Version bump.

*zope-2.13.0_beta1 (17 Oct 2010)

  17 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.13.0_beta1.ebuild:
  Version bump.

*zope-2.12.12 (03 Oct 2010)

  03 Oct 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  -zope-2.12.5.ebuild, -zope-2.12.6.ebuild, -zope-2.12.7.ebuild,
  -zope-2.12.8.ebuild, -zope-2.12.9.ebuild, -zope-2.12.10.ebuild,
  +zope-2.12.12.ebuild:
  Version bump.

*zope-2.13.0_alpha4 (19 Sep 2010)

  19 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.13.0_alpha4.ebuild:
  Version bump.

*zope-2.12.11 (11 Sep 2010)

  11 Sep 2010; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  +zope-2.12.11.ebuild:
  Version bump.

*zope-2.12.10 (11 Sep 2010)
