@@ -1,6 +1,9 @@
 # ChangeLog for net-zope/zope
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.189 2010/12/07 17:16:29 arfrever Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-zope/zope/ChangeLog,v 1.190 2011/01/13 22:34:28 xarthisius Exp $
+
+  13 Jan 2011; Kacper Kowalik <xarthisius@gentoo.org> zope-2.12.14.ebuild:
+  Marked ~ppc wrt #297734
 
 *zope-2.13.1 (07 Dec 2010)
 
